#1. ActiveMQ: Non-durable Subscription